@@ -123,19 +123,17 @@ odoc_misc.cmx: ../typing/btype.cmx ../typing/ctype.cmx ../typing/ident.cmx \
     ../parsing/longident.cmx odoc_messages.cmx odoc_types.cmx \
     ../typing/path.cmx ../typing/types.cmx odoc_misc.cmi 
 odoc.cmo: ../utils/clflags.cmo ../utils/config.cmi ../utils/misc.cmi \
-    odoc_analyse.cmi odoc_args.cmi odoc_config.cmi odoc_crc.cmo odoc_dot.cmo \
+    odoc_analyse.cmi odoc_args.cmi odoc_config.cmi odoc_dot.cmo \
     odoc_global.cmi odoc_html.cmo odoc_info.cmi odoc_latex.cmo odoc_man.cmo \
     odoc_messages.cmo odoc_texi.cmo ../typing/typedtree.cmi 
 odoc.cmx: ../utils/clflags.cmx ../utils/config.cmx ../utils/misc.cmx \
-    odoc_analyse.cmx odoc_args.cmx odoc_config.cmx odoc_crc.cmx odoc_dot.cmx \
+    odoc_analyse.cmx odoc_args.cmx odoc_config.cmx odoc_dot.cmx \
     odoc_global.cmx odoc_html.cmx odoc_info.cmx odoc_latex.cmx odoc_man.cmx \
     odoc_messages.cmx odoc_texi.cmx ../typing/typedtree.cmx 
 odoc_module.cmo: odoc_class.cmo odoc_exception.cmo odoc_name.cmi \
-    odoc_parameter.cmo odoc_type.cmo odoc_types.cmi odoc_value.cmo \
-    ../typing/types.cmi 
+    odoc_type.cmo odoc_types.cmi odoc_value.cmo ../typing/types.cmi 
 odoc_module.cmx: odoc_class.cmx odoc_exception.cmx odoc_name.cmx \
-    odoc_parameter.cmx odoc_type.cmx odoc_types.cmx odoc_value.cmx \
-    ../typing/types.cmx 
+    odoc_type.cmx odoc_types.cmx odoc_value.cmx ../typing/types.cmx 
 odoc_name.cmo: ../typing/ident.cmi ../parsing/longident.cmi \
     ../typing/path.cmi odoc_name.cmi 
 odoc_name.cmx: ../typing/ident.cmx ../parsing/longident.cmx \
